# iswust_bot

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .quartenv.example  404.html  Dockerfile  README.md  bot.py  bot_config_base.py  config_base.py  docker-compose.yml  index.html  log.py  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  shelltools.py  views.py
.github/workflows/: deploy_docs.yml
alembic/: env.py
alembic/versions/: 587975be5229_init.py
app/: __init__.py  config.py  env.py  exceptions.py
app/aio/: __init__.py  requests.py
app/api/: __init__.py  admin.py  course.py  ecard.py  push.py  push_cs_today.py  subscribe.py  user.py
app/bot/: __init__.py  admin.py  code_runner.py  deposit_ics.py  hitokoto.py  man.py  notice_handler.py  preprocessor.py  request_handler.py  save_chat_records.py  score.py  switch.py  update_course.py  weather.py
app/constants/: config.py  dean.py
app/libs/: cache.py  gino.py  roconfig.py  scheduler.py
app/models/: base.py  chat_records.py  course.py  grade.py  information.py  score.py  student.py  subcribe.py  subscribe.py  user.py  user_course.py
app/services/: __init__.py  cookies.py  course.py  credit.py  ecard.py  user.py  weather.py
app/utils/: api.py  (+12 more)
deploy/: index.html  set-env.html  set-qq.html  update.html
docs/: .markdownlint.json  CNAME  README.md
guide/: bind.html  code_runner.html  course_schedule.html  credit.html  ecard.html  hitokoto.html  index.html  remind.html  rss.html  score.html  subscribe.html
iswust/: __init__.py  db.py  models.py
migrations/: env.py
services/: __init__.py  course.py  user.py
tests/: audio_test.py  dwz_test.py  services_test.py  tcn_test.py
utils/: qqai.py  tools.py
views/: __init__.py  admin.py  push.py
web/: .babelrc  .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  .umirc.ts  config-overrides.js  package-lock.json  package.json  tsconfig.json
(+266 files in other folders)
