[tool.poetry]
name = "iswust_nonebot"
version = "0.1.0"
description = ""
authors = ["Artin <lengthmin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot = "^1.4.2"
msgpack = "^1.0.0"
gino = "^0.8.6"
alembic = "^1.4.1"
beautifulsoup4 = "^4.8.2"
lxml = "^4.5.0"
python-dotenv = "^0.12.0"
auth-swust = "^1.3.2"
asyncpg = "^0.20.1"
loguru = "^0.4.1"
apscheduler = "^3.6.3"
arrow = "^0.15.5"
ChineseTimeNLP = "^1.1.5"
httpx = "^0.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
