[tool.poetry]
name = "iswust_nonebot"
version = "0.1.0"
description = ""
authors = ["Artin <lengthmin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot = "^1.4.2"
msgpack = "^1.0.0"
gino = "^0.8.6"
numpy = "^1.18.2"
alembic = "^1.4.1"
beautifulsoup4 = "^4.8.2"
lxml = "^4.5.0"
python-dotenv = "^0.12.0"
auth-swust = "^1.5.0"
loguru = "^0.4.1"
apscheduler = "^3.6.3"
arrow = "^0.15.5"
ChineseTimeNLP = "^1.1.5"
httpx = "^0.11.1"
psycopg2-binary = "^2.8.5"
redis = "^3.4.1"
feedparser = "^6.0.0b3"
environs = "^7.4.0"
tensorflow = "2.2.0rc4"
aiocache = {extras = ["redis"], version = "^0.11.1"}
pandas = "^1.0.3"
rapidfuzz = "^0.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
    | migrations
    | web
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
